service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
spec:
  selector:
    app: wisecow
  ports:
  - protocol: TCP
    port: 4499  # Adjust port if your application listens on a different port
    targetPort: 32443  # Adjust targetPort if Wisecow listens on a different port in the container
  type: LoadBalancer  # Adjust type if you need a different service type (e.g., NodePort)
